--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -210,7 +210,7 @@
     <a href="#skills"><button class="button">Skills</button></a>
     <a href="#projects"><button class="button">Projects</button></a>
     <a href="#contact"><button class="button">Contact</button></a>
-    <a href="MaryJoyel_Resume.pdf" download><button class="button">Download Resume</button></a>
+    <a href="Mary_Joyel.pdf" download><button class="button">Download Resume</button></a>
   </nav>
 </header>
 
